--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,14 @@
             "email": "michael@packagedby.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^7.4|^8.0",
+        "laravel/framework": "^7.0|^8.0",
+        "osteel/openapi-httpfoundation-testing": "^0.3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "PackagedBy\\OpenApiTestingHelpers\\": "src"
+        }
+    }
 }
