--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^7.3|^7.4|^8.0",
         "laravel/framework": "^7.0|^8.0",
         "osteel/openapi-httpfoundation-testing": "^0.3.0"
     },
